No longer migrating data from MetadataCache

MetadataCache is being deprecated.
For M70, we started migrating all data to DownloadDBCache.
For M71, we will stop using MetadataCache data at all. All migrated data
will be destroyed afterwards as the data could be outdated.

BUG=894978

Change-Id: I2f7a070726cdd22d9188dc61f33816db4741ba5e
Reviewed-on: https://chromium-review.googlesource.com/c/1279192
Commit-Queue: Min Qin <qinmin@chromium.org>
Reviewed-by: Xing Liu <xingliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600076}