components/download/internal/common/download_db_cache.h
@@ -22,7 +22,6 @@ namespace download {
 
 class DownloadDB;
 struct DownloadDBEntry;
-struct DownloadEntry;
 
 // Responsible for caching the metadata of all in progress downloads.
 class COMPONENTS_DOWNLOAD_EXPORT DownloadDBCache
@@ -34,8 +33,7 @@ class COMPONENTS_DOWNLOAD_EXPORT DownloadDBCache
   using InitializeCallback =
       base::OnceCallback<void(bool /* success */,
                               std::unique_ptr<std::vector<DownloadDBEntry>>)>;
-  void Initialize(const std::vector<DownloadEntry>& entries,
-                  InitializeCallback callback);
+  void Initialize(InitializeCallback callback);
 
   base::Optional<DownloadDBEntry> RetrieveEntry(const std::string& guid);
   void AddOrReplaceEntry(const DownloadDBEntry& entry);
@@ -55,21 +53,13 @@ class COMPONENTS_DOWNLOAD_EXPORT DownloadDBCache
   void OnDownloadRemoved(DownloadItem* download) override;
 
   // Called when the |download_db_| is initialized.
-  void OnDownloadDBInitialized(const std::vector<DownloadEntry>& entries,
-                               InitializeCallback callback,
-                               bool success);
+  void OnDownloadDBInitialized(InitializeCallback callback, bool success);
 
   // Called when all the download db entries are loaded.
   void OnDownloadDBEntriesLoaded(
       InitializeCallback callback,
       bool success,
       std::unique_ptr<std::vector<DownloadDBEntry>> entries);
-
-  // Migrate DownloadEntry from in-progress cache.
-  void MigrateFromInProgressCache(const std::vector<DownloadEntry>& entries);
-
-  // Called when InProgressCache is migrated.
-  void OnInProgressCacheMigrated(bool success);
 
   void SetTimerTaskRunnerForTesting(
       scoped_refptr<base::SequencedTaskRunner> task_runner);
