components/download/internal/common/download_db_cache_unittest.cc
@@ -35,6 +35,8 @@ DownloadDBEntry CreateDownloadDBEntry() {
   DownloadDBEntry entry;
   DownloadInfo download_info;
   download_info.guid = base::GenerateGUID();
+  static int id = 0;
+  download_info.id = ++id;
   entry.download_info = download_info;
   return entry;
 }
@@ -43,44 +45,6 @@ std::string GetKey(const std::string& guid) {
   return DownloadNamespaceToString(
              DownloadNamespace::NAMESPACE_BROWSER_DOWNLOAD) +
          "," + guid;
-}
-
-std::unique_ptr<DownloadItem> CreateDownloadItem(const std::string& guid) {
-  std::unique_ptr<MockDownloadItem> item(
-      new ::testing::NiceMock<MockDownloadItem>());
-  ON_CALL(*item, GetGuid()).WillByDefault(ReturnRefOfCopy(guid));
-  ON_CALL(*item, GetUrlChain())
-      .WillByDefault(ReturnRefOfCopy(std::vector<GURL>()));
-  ON_CALL(*item, GetReferrerUrl()).WillByDefault(ReturnRefOfCopy(GURL()));
-  ON_CALL(*item, GetSiteUrl()).WillByDefault(ReturnRefOfCopy(GURL()));
-  ON_CALL(*item, GetTabUrl()).WillByDefault(ReturnRefOfCopy(GURL()));
-  ON_CALL(*item, GetTabReferrerUrl()).WillByDefault(ReturnRefOfCopy(GURL()));
-  ON_CALL(*item, GetETag()).WillByDefault(ReturnRefOfCopy(std::string("etag")));
-  ON_CALL(*item, GetLastModifiedTime())
-      .WillByDefault(ReturnRefOfCopy(std::string("last-modified")));
-  ON_CALL(*item, GetMimeType()).WillByDefault(Return("text/html"));
-  ON_CALL(*item, GetOriginalMimeType()).WillByDefault(Return("text/html"));
-  ON_CALL(*item, GetTotalBytes()).WillByDefault(Return(1000));
-  ON_CALL(*item, GetFullPath())
-      .WillByDefault(ReturnRefOfCopy(base::FilePath()));
-  ON_CALL(*item, GetTargetFilePath())
-      .WillByDefault(ReturnRefOfCopy(base::FilePath()));
-  ON_CALL(*item, GetReceivedBytes()).WillByDefault(Return(1000));
-  ON_CALL(*item, GetStartTime()).WillByDefault(Return(base::Time()));
-  ON_CALL(*item, GetEndTime()).WillByDefault(Return(base::Time()));
-  ON_CALL(*item, GetReceivedSlices())
-      .WillByDefault(
-          ReturnRefOfCopy(std::vector<DownloadItem::ReceivedSlice>()));
-  ON_CALL(*item, GetHash()).WillByDefault(ReturnRefOfCopy(std::string("hash")));
-  ON_CALL(*item, IsTransient()).WillByDefault(Return(false));
-  ON_CALL(*item, GetDangerType())
-      .WillByDefault(Return(DOWNLOAD_DANGER_TYPE_NOT_DANGEROUS));
-  ON_CALL(*item, GetLastReason())
-      .WillByDefault(Return(DOWNLOAD_INTERRUPT_REASON_NONE));
-  ON_CALL(*item, GetState()).WillByDefault(Return(DownloadItem::IN_PROGRESS));
-  ON_CALL(*item, IsPaused()).WillByDefault(Return(false));
-  ON_CALL(*item, GetBytesWasted()).WillByDefault(Return(10));
-  return std::move(item);
 }
 
 }  // namespace
@@ -145,7 +109,6 @@ TEST_F(DownloadDBCacheTest, InitializeAndRetrieve) {
   CreateDBCache();
   std::vector<DownloadDBEntry> loaded_entries;
   db_cache_->Initialize(
-      std::vector<DownloadEntry>(),
       base::BindOnce(&DownloadDBCacheTest::InitCallback, base::Unretained(this),
                      &loaded_entries));
   db_->InitCallback(true);
@@ -166,7 +129,6 @@ TEST_F(DownloadDBCacheTest, AddNewEntry) {
   CreateDBCache();
   std::vector<DownloadDBEntry> loaded_entries;
   db_cache_->Initialize(
-      std::vector<DownloadEntry>(),
       base::BindOnce(&DownloadDBCacheTest::InitCallback, base::Unretained(this),
                      &loaded_entries));
   db_->InitCallback(true);
@@ -192,7 +154,6 @@ TEST_F(DownloadDBCacheTest, ModifyExistingEntry) {
   CreateDBCache();
   std::vector<DownloadDBEntry> loaded_entries;
   db_cache_->Initialize(
-      std::vector<DownloadEntry>(),
       base::BindOnce(&DownloadDBCacheTest::InitCallback, base::Unretained(this),
                      &loaded_entries));
   db_->InitCallback(true);
@@ -233,7 +194,6 @@ TEST_F(DownloadDBCacheTest, FilePathChange) {
   CreateDBCache();
   std::vector<DownloadDBEntry> loaded_entries;
   db_cache_->Initialize(
-      std::vector<DownloadEntry>(),
       base::BindOnce(&DownloadDBCacheTest::InitCallback, base::Unretained(this),
                      &loaded_entries));
   db_->InitCallback(true);
@@ -263,7 +223,6 @@ TEST_F(DownloadDBCacheTest, RemoveEntry) {
   CreateDBCache();
   std::vector<DownloadDBEntry> loaded_entries;
   db_cache_->Initialize(
-      std::vector<DownloadEntry>(),
       base::BindOnce(&DownloadDBCacheTest::InitCallback, base::Unretained(this),
                      &loaded_entries));
   db_->InitCallback(true);
@@ -293,7 +252,6 @@ TEST_F(DownloadDBCacheTest, RemoveWhileModifyExistingEntry) {
   CreateDBCache();
   std::vector<DownloadDBEntry> loaded_entries;
   db_cache_->Initialize(
-      std::vector<DownloadEntry>(),
       base::BindOnce(&DownloadDBCacheTest::InitCallback, base::Unretained(this),
                      &loaded_entries));
   db_->InitCallback(true);
@@ -317,53 +275,6 @@ TEST_F(DownloadDBCacheTest, RemoveWhileModifyExistingEntry) {
   db_->LoadCallback(true);
   ASSERT_EQ(loaded_entries.size(), 1u);
   ASSERT_EQ(remaining, loaded_entries[0]);
-}
-
-// Tests that Migrating a DownloadEntry from InProgressCache should store
-// a DownloadDBEntry in the DownloadDB.
-TEST_F(DownloadDBCacheTest, MigrateFromInProgressCache) {
-  CreateDBCache();
-  std::vector<DownloadEntry> download_entries;
-  download_entries.emplace_back(
-      "guid1", "foo.com", DownloadSource::DRAG_AND_DROP, true,
-      DownloadUrlParameters::RequestHeadersType(), 100);
-  download_entries.emplace_back(
-      "guid2", "foobar.com", DownloadSource::UNKNOWN, false,
-      DownloadUrlParameters::RequestHeadersType(), 200);
-
-  std::vector<DownloadDBEntry> loaded_entries;
-  db_cache_->Initialize(
-      download_entries,
-      base::BindOnce(&DownloadDBCacheTest::InitCallback, base::Unretained(this),
-                     &loaded_entries));
-  db_->InitCallback(true);
-  db_->UpdateCallback(true);
-  db_->LoadCallback(true);
-  ASSERT_FALSE(loaded_entries.empty());
-
-  std::unique_ptr<DownloadItem> item = CreateDownloadItem("guid1");
-  OnDownloadUpdated(item.get());
-
-  ASSERT_EQ(task_runner_->GetPendingTaskCount(), 1u);
-  ASSERT_GT(task_runner_->NextPendingTaskDelay(), base::TimeDelta());
-  task_runner_->FastForwardUntilNoTasksRemain();
-  db_->UpdateCallback(true);
-
-  DownloadDBEntry entry1 = CreateDownloadDBEntryFromItem(
-      *item, UkmInfo(DownloadSource::DRAG_AND_DROP, 100), true,
-      DownloadUrlParameters::RequestHeadersType());
-  DownloadDBEntry entry2 =
-      DownloadDBConversions::DownloadDBEntryFromDownloadEntry(
-          download_entries[1]);
-
-  DownloadDB* download_db = GetDownloadDB();
-  download_db->LoadEntries(base::BindOnce(&DownloadDBCacheTest::InitCallback,
-                                          base::Unretained(this),
-                                          &loaded_entries));
-  db_->LoadCallback(true);
-  ASSERT_EQ(loaded_entries.size(), 2u);
-  ASSERT_TRUE(entry1 == loaded_entries[0]);
-  ASSERT_TRUE(entry2 == loaded_entries[1]);
 }
 
 }  // namespace download
